AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}
bin_PROGRAMS = armulator
armulator_SOURCES = src/arch.h src/ARM.cpp src/ARM.h src/CPU.h src/MMU.cpp src/MMU.h src/Thumb.cpp src/Thumb.h src/elf_file.cpp src/elf_file.h src/error.h src/main.h src/main.cpp src/swi_semihost.cpp src/swi_semihost.h
